# ic-benches

./: .env.example  .env.template  .gitignore  Makefile  README.md  config.toml  main.py  pyproject.toml
ansible/: collect.yml  deploy.yml  inventory.yml  test_bucket_ic_eu.yml  test_connection.yml
scripts/: combine_charts.py  data_gen.py  debug_ndjson_errors.py  export_excel.py  visualize_metrics.py
src/: cli.py  credentials.py  harness.py  metrics.py
tests/: conftest.py
tests/integration/: test_dataset.py  tests_integration_cli_harness.py  tests_integration_harness_end_to_end.py  tests_integration_metrics_processor.py
